update: 添加默认楼栋修正

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>chart-26</title><link href="/css/app.b9bc6bba.css" rel="preload" as="style"><link href="/css/chunk-vendors.9181e156.css" rel="preload" as="style"><link href="/js/app.3bc133dd.js" rel="preload" as="script"><link href="/js/chunk-vendors.8e1e23ec.js" rel="preload" as="script"><link href="/css/chunk-vendors.9181e156.css" rel="stylesheet"><link href="/css/app.b9bc6bba.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but chart-26 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.8e1e23ec.js"></script><script src="/js/app.3bc133dd.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="icon" href="/favicon.ico" />
+    <title>抗原、核酸检测汇总</title>
+    <link href="/css/app.114ea14c.css" rel="preload" as="style" />
+    <link href="/css/chunk-vendors.9181e156.css" rel="preload" as="style" />
+    <link href="/js/app.beb4faa9.js" rel="preload" as="script" />
+    <link href="/js/chunk-vendors.8e1e23ec.js" rel="preload" as="script" />
+    <link href="/css/chunk-vendors.9181e156.css" rel="stylesheet" />
+    <link href="/css/app.114ea14c.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript
+      ><strong
+        >We're sorry but chart-26 doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
+      ></noscript
+    >
+    <div id="app"></div>
+    <script src="/js/chunk-vendors.8e1e23ec.js"></script>
+    <script src="/js/app.beb4faa9.js"></script>
+  </body>
+</html>
