--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="/favicon.ico" />
-    <title>抗原、核酸检测汇总</title>
-    <link href="/css/app.8f0722f1.css" rel="preload" as="style" />
+    <title>抗原、核酸检测统计</title>
+    <link href="/css/app.dd9f9829.css" rel="preload" as="style" />
     <link href="/css/chunk-vendors.9181e156.css" rel="preload" as="style" />
-    <link href="/js/app.dccd4538.js" rel="preload" as="script" />
+    <link href="/js/app.8fc05bf2.js" rel="preload" as="script" />
     <link href="/js/chunk-vendors.8e1e23ec.js" rel="preload" as="script" />
     <link href="/css/chunk-vendors.9181e156.css" rel="stylesheet" />
-    <link href="/css/app.8f0722f1.css" rel="stylesheet" />
+    <link href="/css/app.dd9f9829.css" rel="stylesheet" />
   </head>
   <body>
     <noscript
@@ -22,6 +22,6 @@
     >
     <div id="app"></div>
     <script src="/js/chunk-vendors.8e1e23ec.js"></script>
-    <script src="/js/app.dccd4538.js"></script>
+    <script src="/js/app.8fc05bf2.js"></script>
   </body>
 </html>
